@@ -1,3 +1,9 @@
+2003-01-10  Havoc Pennington  <hp@redhat.com>
+
+	* src/Makefile.am (desktopfiles_DATA): don't install .desktop file
+	for properties dialog if we aren't building/installing the
+	properties dialog.
+
 2003-01-10  Havoc Pennington  <hp@pobox.com>
 
 	* NEWS: update
